--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <nav class="blue darken-2">
         <div class="container">
           <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">green</a>
+            <a href="#!" class="brand-logo">March</a>
             <a href="#" data-target="mobile-app" class="sidenav-trigger">
               <i class="material-icons">menu</i>
             </a>
@@ -39,6 +39,7 @@
               <li><a href="#Tentang">Tentang Kami</a></li>
               <li><a href="#Portfolio">Portfolio </a></li>
               <li><a href="#kontak">Kontak Karir</a></li>
+              <li><a class="btn white blue-text text-darken-2">LOGIN</a></li>
             </ul>
           </div>
         </div>
