--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <nav class="blue darken-2">
         <div class="container">
           <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">March</a>
+            <a href="#!" class="brand-logo">closeheat!</a>
             <a href="#" data-target="mobile-app" class="sidenav-trigger">
               <i class="material-icons">menu</i>
             </a>
@@ -38,7 +38,7 @@
               <li><a href="#layanan">Layanan</a></li>
               <li><a href="#Tentang">Tentang Kami</a></li>
               <li><a href="#Portfolio">Portfolio </a></li>
-              <li><a href="#kontak">Kontak Karir</a></li>
+              <li><a href="#kontak">Kontak</a></li>
               <li><a class="btn white blue-text text-darken-2">LOGIN</a></li>
             </ul>
           </div>
@@ -53,6 +53,42 @@
       <li><a href="#Portfolio">Portfolio </a></li>
       <li><a href="#kontak">Kontak Karir</a></li>
     </ul>
+
+    <!-- slider -->
+    <div class="slider">
+      <ul class="slides">
+        <li>
+          <img src="src/img/slider/1.png" />
+          <!-- random image -->
+          <div class="caption center-align">
+            <h3>This is our big Tagline!</h3>
+            <h5 class="light grey-text text-lighten-3">
+              Here's our small slogan.
+            </h5>
+          </div>
+        </li>
+        <li>
+          <img src="src/img/slider/2.png" />
+          <!-- random image -->
+          <div class="caption center-align">
+            <h3>This is our big Tagline!</h3>
+            <h5 class="light grey-text text-lighten-3">
+              Here's our small slogan.
+            </h5>
+          </div>
+        </li>
+        <li>
+          <img src="src/img/slider/3.png" />
+          <!-- random image -->
+          <div class="caption center-align">
+            <h3>This is our big Tagline!</h3>
+            <h5 class="light grey-text text-lighten-3">
+              Here's our small slogan.
+            </h5>
+          </div>
+        </li>
+      </ul>
+    </div>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <!-- Compiled and minified JavaScript -->
