--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
   <body>
     <!-- navbar -->
     <div class="navbar-fixed">
-      <nav class="blue darken-2">
+      <nav class="transparent z-depth-0">
         <div class="container">
           <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">closeheat!</a>
+            <a href="#!" class="brand-logo black-text">closeheat!</a>
             <a href="#" data-target="mobile-app" class="sidenav-trigger">
               <i class="material-icons">menu</i>
             </a>
             <ul class="right hide-on-med-and-down">
-              <li><a href="#home">Home</a></li>
-              <li><a href="#layanan">Layanan</a></li>
-              <li><a href="#Tentang">Tentang Kami</a></li>
-              <li><a href="#Portfolio">Portfolio </a></li>
-              <li><a href="#kontak">Kontak</a></li>
-              <li><a class="btn white blue-text text-darken-2">LOGIN</a></li>
+              <li><a href="#home" class="black-text">Home</a></li>
+              <li><a href="#layanan" class="black-text">Layanan</a></li>
+              <li><a href="#Tentang" class="black-text">Tentang Kami</a></li>
+              <li><a href="#Portfolio" class="black-text">Portfolio </a></li>
+              <li><a href="#kontak" class="black-text">Kontak</a></li>
+              <li><a class="btn white black-text text-darken-2">LOGIN</a></li>
             </ul>
           </div>
         </div>
@@ -58,33 +58,27 @@
     <div class="slider">
       <ul class="slides">
         <li>
-          <img src="src/img/slider/1.png" />
+          <img src="src/img/slider1.jpg" />
           <!-- random image -->
           <div class="caption center-align">
-            <h3>This is our big Tagline!</h3>
-            <h5 class="light grey-text text-lighten-3">
-              Here's our small slogan.
-            </h5>
+            <h3>Pengembangan web dibuat sederhaan!</h3>
+            <h5 class="light grey-text text-lighten-3">closeheat!</h5>
           </div>
         </li>
         <li>
-          <img src="src/img/slider/2.png" />
+          <img src="src/img/slider2.jpg" />
           <!-- random image -->
-          <div class="caption center-align">
-            <h3>This is our big Tagline!</h3>
-            <h5 class="light grey-text text-lighten-3">
-              Here's our small slogan.
-            </h5>
+          <div class="caption left-align">
+            <h3>Pengembangan web dibuat sederhaan!</h3>
+            <h5 class="light grey-text text-lighten-3">closeheat!</h5>
           </div>
         </li>
         <li>
-          <img src="src/img/slider/3.png" />
+          <img src="src/img/slider3.jpg" style="background-size: cover" />
           <!-- random image -->
-          <div class="caption center-align">
-            <h3>This is our big Tagline!</h3>
-            <h5 class="light grey-text text-lighten-3">
-              Here's our small slogan.
-            </h5>
+          <div class="caption right-align">
+            <h3>Pengembangan web dibuat sederhaan!</h3>
+            <h5 class="light grey-text text-lighten-3">closeheat!</h5>
           </div>
         </li>
       </ul>
