--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="nav-wrapper">
             <a href="#!" class="brand-logo black-text">closeheat!</a>
             <a href="#" data-target="mobile-app" class="sidenav-trigger">
-              <i class="material-icons">menu</i>
+              <i class="material-icons black-text">menu</i>
             </a>
             <ul class="right hide-on-med-and-down">
               <li><a href="#home" class="black-text">Home</a></li>
