--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
   </head>
 
   <body>
+    <!-- header -->
     <!-- navbar -->
-    <div class="navbar-fixed">
+    <div class="">
       <nav class="transparent z-depth-0">
         <div class="container">
           <div class="nav-wrapper">
@@ -83,6 +84,33 @@
         </li>
       </ul>
     </div>
+    <!-- akhir header -->
+
+    <!-- pelayanan -->
+    <section class="section container" id="pelayanan">
+      <div class="row">
+        <col class="s12 l6" />
+        <div class="caption center-align">
+          <h4 class="light black-text">Tentang Pelayanan</h4>
+          <p>
+            Pelayanan yang dibutuhkan menuntut spesialisasi dan pengembangan
+            tiada henti. Pengembangan ini tidak hanya pada ketersedian fasilitas
+            pengembangan saja, namun juga pada pelayanan yang memenuhi standar
+            kualitas pelayanan terpadu.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 l4">
+          <img
+            src="/src/img/t.jpg"
+            alt="Layanan1"
+            class="responsive-img materialboxed" />
+        </div>
+        <div class="col s12 l6"></div>
+      </div>
+    </section>
+
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <!-- Compiled and minified JavaScript -->
