--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <!-- pelayanan -->
     <section class="section container" id="pelayanan">
-      <div class="row">
+      <!-- <div class="row">
         <col class="s12 l6" />
         <div class="caption center-align">
           <h4 class="light black-text">Tentang Pelayanan</h4>
@@ -99,11 +99,11 @@
             kualitas pelayanan terpadu.
           </p>
         </div>
-      </div>
+      </div> -->
       <div class="row">
         <div class="col s12 l4">
           <img
-            src="/src/img/t.jpg"
+            src="/src/img/p1.jpg"
             alt="Layanan1"
             class="responsive-img materialboxed" />
         </div>
