--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <body>
     <!-- header -->
     <!-- navbar -->
-    <div class="">
-      <nav class="transparent z-depth-0">
+    <div class="navbar-fixed">
+      <nav class="white z-depth-0">
         <div class="container">
           <div class="nav-wrapper">
             <a href="#!" class="brand-logo black-text">closeheat!</a>
