--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 
     <!-- style -->
-    <link rel="stylesheet" href="/src/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -59,7 +59,7 @@
     <div class="slider">
       <ul class="slides">
         <li>
-          <img src="src/img/slider1.jpg" />
+          <img src="assets/img/slider1.jpg" />
           <!-- random image -->
           <div class="caption center-align">
             <h3>Pengembangan web dibuat sederhaan!</h3>
@@ -67,7 +67,7 @@
           </div>
         </li>
         <li>
-          <img src="src/img/slider2.jpg" />
+          <img src="assets/img/slider2.jpg" />
           <!-- random image -->
           <div class="caption left-align">
             <h3>Pengembangan web dibuat sederhaan!</h3>
@@ -75,7 +75,7 @@
           </div>
         </li>
         <li>
-          <img src="src/img/slider3.jpg" style="background-size: cover" />
+          <img src="assets/img/slider3.jpg" style="background-size: cover" />
           <!-- random image -->
           <div class="caption right-align">
             <h3>Pengembangan web dibuat sederhaan!</h3>
@@ -103,7 +103,7 @@
       <div class="row">
         <div class="col s12 l4">
           <img
-            src="/src/img/p1.jpg"
+            src="assets/img/p1.jpg"
             alt="Layanan1"
             class="responsive-img materialboxed" />
         </div>
@@ -116,6 +116,6 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- script js -->
-    <script src="src/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
