--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       <nav class="white z-depth-0">
         <div class="container">
           <div class="nav-wrapper">
-            <a href="#!" class="brand-logo black-text">closeheat!</a>
+            <a href="#!" class="brand-logo blue-text text-darken-4"
+              >closeheat!</a
+            >
             <a href="#" data-target="mobile-app" class="sidenav-trigger">
               <i class="material-icons black-text">menu</i>
             </a>
@@ -40,7 +42,7 @@
               <li><a href="#Tentang" class="black-text">Tentang Kami</a></li>
               <li><a href="#Portfolio" class="black-text">Portfolio </a></li>
               <li><a href="#kontak" class="black-text">Kontak</a></li>
-              <li><a class="btn white black-text text-darken-2">LOGIN</a></li>
+              <li><a class="btn blue darken-4 white-text">LOGIN</a></li>
             </ul>
           </div>
         </div>
@@ -61,8 +63,8 @@
         <li>
           <img src="assets/img/slider1.jpg" />
           <!-- random image -->
-          <div class="caption center-align">
-            <h3>Pengembangan web dibuat sederhaan!</h3>
+          <div class="caption right-align">
+            <h3>Pengembangan Aplikasi Web!</h3>
             <h5 class="light grey-text text-lighten-3">closeheat!</h5>
           </div>
         </li>
@@ -70,15 +72,15 @@
           <img src="assets/img/slider2.jpg" />
           <!-- random image -->
           <div class="caption left-align">
-            <h3>Pengembangan web dibuat sederhaan!</h3>
+            <h3>Mengintegrasikan sistem yang sudah ada!</h3>
             <h5 class="light grey-text text-lighten-3">closeheat!</h5>
           </div>
         </li>
         <li>
           <img src="assets/img/slider3.jpg" style="background-size: cover" />
           <!-- random image -->
-          <div class="caption right-align">
-            <h3>Pengembangan web dibuat sederhaan!</h3>
+          <div class="caption center-align">
+            <h3>Pembuatan struktur dan fungsionalitas situs!</h3>
             <h5 class="light grey-text text-lighten-3">closeheat!</h5>
           </div>
         </li>
@@ -88,26 +90,58 @@
 
     <!-- pelayanan -->
     <section class="section container" id="pelayanan">
-      <!-- <div class="row">
-        <col class="s12 l6" />
-        <div class="caption center-align">
-          <h4 class="light black-text">Tentang Pelayanan</h4>
-          <p>
-            Pelayanan yang dibutuhkan menuntut spesialisasi dan pengembangan
-            tiada henti. Pengembangan ini tidak hanya pada ketersedian fasilitas
-            pengembangan saja, namun juga pada pelayanan yang memenuhi standar
-            kualitas pelayanan terpadu.
-          </p>
-        </div>
-      </div> -->
-      <div class="row">
+      <div class="row" id="pertama">
         <div class="col s12 l4">
           <img
-            src="assets/img/p1.jpg"
+            src="https://cdn-icons-png.flaticon.com/512/3308/3308395.png"
             alt="Layanan1"
             class="responsive-img materialboxed" />
         </div>
-        <div class="col s12 l6"></div>
+        <div class="col s12 l6 offset-l1">
+          <h5 class="black-text text-darken-4">Pengembangan Aplikasi Web</h5>
+          <p>
+            Penting dalam membangun kehadiran online yang profesional dan
+            efektif. Dengan layanan ini, pengembang web dapat membantu
+            menciptakan situs web yang sesuai dengan kebutuhan klien dan dapat
+            meningkatkan brand awareness, pengalaman pengguna, serta keuntungan
+            bisnis.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 l4 offset-l1 push-l7">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/3623/3623963.png"
+            alt="Layanan1"
+            class="responsive-img materialboxed" />
+        </div>
+        <div class="col s12 l6 offset-l1 pull-l5 right-align">
+          <h5 class="black-text text-darken-4">Integrasi Sistem</h5>
+          <p>
+            Mengintegrasikan sistem yang sudah ada dengan situs web yang baru
+            atau sebaliknya. Dalam layanan integrasi sistem, pengembang web
+            harus memiliki pengetahuan dan keterampilan teknis yang kuat untuk
+            dapat menghubungkan berbagai sistem dan memastikan bahwa semua
+            elemen dapat beroperasi dengan baik.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 l4">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/6712/6712857.png"
+            alt="Layanan1"
+            class="responsive-img materialboxed" />
+        </div>
+        <div class="col s12 l6 offset-l1">
+          <h5 class="black-text text-darken-4">Konsultasi dan Pelatihan</h5>
+          <p>
+            Desain dan Pembuatan Situs Web adalah layanan yang ditawarkan oleh
+            pengembang web untuk membuat situs web yang disesuaikan dengan
+            kebutuhan klien. Layanan ini mencakup perancangan tampilan situs
+            web, pembuatan struktur dan fungsionalitas situs
+          </p>
+        </div>
       </div>
     </section>
 
