modifikasi & add komponen

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </p>
         </div>
       </div>
-      <div class="row">
+      <div class="row" id="terakhir">
         <div class="col s12 l4">
           <img
             src="https://cdn-icons-png.flaticon.com/512/6712/6712857.png"
@@ -142,6 +142,23 @@
             web, pembuatan struktur dan fungsionalitas situs
           </p>
         </div>
+      </div>
+    </section>
+
+    <!-- tentangkami -->
+    <section class="section container" id="tentang">
+      <div class="row">
+        <div class="col s12 l4">
+          <h5 class="black-text text-darken-4">Tentang Kami</h5>
+          <p class="card-panel">
+            closeheat adalah website yang menyediakan berbagai kursus online,
+            tutorial, dan sertifikasi di bidang teknologi informasi. Website ini
+            bertujuan untuk meningkatkan keterampilan teknis dan membantu para
+            pengembang web, pemula maupun profesional, untuk mempelajari
+            teknologi terkini dan terbaru.
+          </p>
+        </div>
+        <div class="col s12 l6 offset-l2"></div>
       </div>
     </section>
 
