modifikasi & add komponen

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="row">
         <div class="col s12 l4">
           <h5 class="black-text text-darken-4">Tentang Kami</h5>
-          <p class="card-panel">
+          <p class="card-panel blue-text text-darken-4">
             closeheat adalah website yang menyediakan berbagai kursus online,
             tutorial, dan sertifikasi di bidang teknologi informasi. Website ini
             bertujuan untuk meningkatkan keterampilan teknis dan membantu para
@@ -158,7 +158,11 @@
             teknologi terkini dan terbaru.
           </p>
         </div>
-        <div class="col s12 l6 offset-l2"></div>
+        <div class="col s12 l6 offset-l2">
+          <div class="tabs">
+            <div class="tab col s6"></div>
+          </div>
+        </div>
       </div>
     </section>
 
