modifikasi & add komponen

--- a/index.html
+++ b/index.html
@@ -160,7 +160,13 @@
         </div>
         <div class="col s12 l6 offset-l2">
           <div class="tabs">
-            <div class="tab col s6"></div>
+            <div class="tab col s6">
+              <a
+                href="#webdeveloper"
+                class="active light-blue-tex text-darken-4"
+                >Web Developer</a
+              >
+            </div>
           </div>
         </div>
       </div>
