modifikasi & add komponen

--- a/index.html
+++ b/index.html
@@ -159,15 +159,18 @@
           </p>
         </div>
         <div class="col s12 l6 offset-l2">
-          <div class="tabs">
-            <div class="tab col s6">
-              <a
-                href="#webdeveloper"
-                class="active light-blue-tex text-darken-4"
-                >Web Developer</a
-              >
-            </div>
-          </div>
+          <ul class="tabs">
+            <li class="tab col s6">
+              <a href="#webDeveloper" class="active black-text text-darken-4"
+                >Web Developer
+              </a>
+            </li>
+            <li class="tab col s6">
+              <a href="#mobileApp" class="active black-text text-darken-4">
+                Mobil App Development
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
