--- a/index.html
+++ b/index.html
@@ -161,14 +161,10 @@
         <div class="col s12 l6 offset-l2">
           <ul class="tabs">
             <li class="tab col s6">
-              <a href="#webDeveloper" class="active black-text text-darken-4"
-                >Web Developer
-              </a>
+              <a href="#webDeveloper" class="active">Web Developer </a>
             </li>
             <li class="tab col s6">
-              <a href="#mobileApp" class="active black-text text-darken-4">
-                Mobil App Development
-              </a>
+              <a href="#mobileApp" class="active"> Mobil App Development </a>
             </li>
           </ul>
         </div>
