styling navbar box-shadow

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- header -->
     <!-- navbar -->
     <div class="navbar-fixed">
-      <nav class="white z-depth-0">
+      <nav class="white">
         <div class="container">
           <div class="nav-wrapper">
             <a href="#!" class="brand-logo blue-text text-darken-4"
