--- a/index.html
+++ b/index.html
@@ -167,6 +167,26 @@
               <a href="#mobileApp" class="active"> Mobil App Development </a>
             </li>
           </ul>
+          <div id="webDeveloper" class="col s12">
+            <p class="flow-text light-blue-text text-darken-4">Web Developer</p>
+            <p>
+              Web Developer adalah salah satu kesukaan saya bertujuan untuk
+              meningkatkan keterampilan teknis dan membantu para pengembang web,
+              pemula maupun profesional, untuk mempelajari teknologi terkini dan
+              terbaru.
+            </p>
+          </div>
+          <div id="mobileApp" class="col s12">
+            <p class="flow-text light-blue-text text-darken-4">
+              Mobile App Developer Developer
+            </p>
+            <p>
+              Mobile App Developer Developer adalah salah satu kesukaan saya
+              bertujuan untuk meningkatkan keterampilan teknis dan membantu para
+              pengembang web, pemula maupun profesional, untuk mempelajari
+              teknologi terkini dan terbaru.
+            </p>
+          </div>
         </div>
       </div>
     </section>
