add file & modifikasi

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <section class="section container" id="tentang">
       <div class="row">
         <div class="col s12 l4">
-          <h5 class="black-text text-darken-4">Tentang Kami</h5>
+          <h5 class="black-text text-darken-4 tentang">Tentang Kami</h5>
           <p class="card-panel blue-text text-darken-4">
             closeheat adalah website yang menyediakan berbagai kursus online,
             tutorial, dan sertifikasi di bidang teknologi informasi. Website ini
@@ -168,8 +168,8 @@
             </li>
           </ul>
           <div id="webDeveloper" class="col s12">
-            <p class="flow-text light-blue-text text-darken-4">Web Developer</p>
-            <p>
+            <p class="flow-text">Web Developer</p>
+            <p class="text card-panel">
               Web Developer adalah salah satu kesukaan saya bertujuan untuk
               meningkatkan keterampilan teknis dan membantu para pengembang web,
               pemula maupun profesional, untuk mempelajari teknologi terkini dan
@@ -177,10 +177,8 @@
             </p>
           </div>
           <div id="mobileApp" class="col s12">
-            <p class="flow-text light-blue-text text-darken-4">
-              Mobile App Developer Developer
-            </p>
-            <p>
+            <p class="flow-text">Mobile App Developer Developer</p>
+            <p class="text card-panel">
               Mobile App Developer Developer adalah salah satu kesukaan saya
               bertujuan untuk meningkatkan keterampilan teknis dan membantu para
               pengembang web, pemula maupun profesional, untuk mempelajari
