styling card-panel tentang kami

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
     <!-- tentangkami -->
     <section class="section container" id="tentang">
       <div class="row">
-        <div class="col s12 l4">
-          <h5 class="black-text text-darken-4 tentang">Tentang Kami</h5>
+        <div class="col s12 l4 tentang">
+          <h5 class="black-text text-darken-4">Tentang Kami</h5>
           <p class="card-panel blue-text text-darken-4">
             closeheat adalah website yang menyediakan berbagai kursus online,
             tutorial, dan sertifikasi di bidang teknologi informasi. Website ini
@@ -169,7 +169,7 @@
           </ul>
           <div id="webDeveloper" class="col s12">
             <p class="flow-text">Web Developer</p>
-            <p class="text card-panel">
+            <p class="card-panel blue-text text-darken-4">
               Web Developer adalah salah satu kesukaan saya bertujuan untuk
               meningkatkan keterampilan teknis dan membantu para pengembang web,
               pemula maupun profesional, untuk mempelajari teknologi terkini dan
@@ -178,7 +178,7 @@
           </div>
           <div id="mobileApp" class="col s12">
             <p class="flow-text">Mobile App Developer Developer</p>
-            <p class="text card-panel">
+            <p class="card-panel blue-text text-darken-4">
               Mobile App Developer Developer adalah salah satu kesukaan saya
               bertujuan untuk meningkatkan keterampilan teknis dan membantu para
               pengembang web, pemula maupun profesional, untuk mempelajari
