styling card-panel tentang kami

--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
       </div>
     </section>
 
+    <!-- porfolio -->
+    <div class="parallax-container">
+      <div class="parallax">
+        <img src="assets/img/parallax.jpg" />
+      </div>
+    </div>
+
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <!-- Compiled and minified JavaScript -->
