--- a/index.html
+++ b/index.html
@@ -37,11 +37,19 @@
               <i class="material-icons black-text">menu</i>
             </a>
             <ul class="right hide-on-med-and-down">
-              <li><a href="#home" class="black-text">Home</a></li>
-              <li><a href="#layanan" class="black-text">Layanan</a></li>
-              <li><a href="#Tentang" class="black-text">Tentang Kami</a></li>
-              <li><a href="#Portfolio" class="black-text">Portfolio </a></li>
-              <li><a href="#kontak" class="black-text">Kontak</a></li>
+              <li class="link"><a href="#home" class="black-text">Home</a></li>
+              <li class="link">
+                <a href="#layanan" class="black-text">Layanan</a>
+              </li>
+              <li class="link">
+                <a href="#Tentang" class="black-text">Tentang Kami</a>
+              </li>
+              <li class="link">
+                <a href="#Portfolio" class="black-text">Portfolio </a>
+              </li>
+              <li class="link">
+                <a href="#kontak" class="black-text">Kontak</a>
+              </li>
               <li><a class="btn blue darken-4 white-text">LOGIN</a></li>
             </ul>
           </div>
