--- a/index.html
+++ b/index.html
@@ -196,6 +196,45 @@
       </div>
     </div>
 
+    <!-- footer -->
+    <footer class="page-footer white">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="black-text">About Content</h5>
+            <p class="black-text text-darken-4">
+              closeheat adalah website yang menyediakan berbagai kursus online,
+              tutorial, dan sertifikasi di bidang teknologi informasi. Website
+              ini bertujuan untuk meningkatkan keterampilan teknis dan membantu
+              para pengembang web, pemula maupun profesional, untuk mempelajari
+              teknologi terkini dan terbaru.
+            </p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="black-text">Links</h5>
+            <ul>
+              <li><a class="black-text text-darken-3" href="#!">Github</a></li>
+              <li>
+                <a class="black-text text-darken-3" href="#!">Showwcase</a>
+              </li>
+              <li><a class="black-text text-darken-3" href="#!">Linkid</a></li>
+              <li>
+                <a class="black-text text-darken-3" href="#!">Instagram</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container black-text">
+          © 2014 copyright closeheat!
+          <a class="black-text text-darken-4 center-align" href="#!"
+            >muhaemin</a
+          >
+        </div>
+      </div>
+    </footer>
+
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <!-- Compiled and minified JavaScript -->
