add class portfolio

--- a/index.html
+++ b/index.html
@@ -194,6 +194,13 @@
       <div class="parallax">
         <img src="assets/img/parallax.jpg" />
       </div>
+      <div class="container porfolio">
+        <div class="row">
+          <div class="col s12 l6">
+            <img src="/assets/img/client2.png" alt="" />
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- footer -->
