--- a/index.html
+++ b/index.html
@@ -196,9 +196,7 @@
       </div>
       <div class="container porfolio">
         <div class="row">
-          <div class="col s12 l6">
-            <img src="/assets/img/client2.png" alt="" />
-          </div>
+          <div class="col s4 l6"></div>
         </div>
       </div>
     </div>
