add class portfolio

--- a/index.html
+++ b/index.html
@@ -190,14 +190,11 @@
     </section>
 
     <!-- porfolio -->
+    <section class="container" id="portfolio"></section>
+
     <div class="parallax-container">
       <div class="parallax">
         <img src="assets/img/parallax.jpg" />
-      </div>
-      <div class="container porfolio">
-        <div class="row">
-          <div class="col s4 l6"></div>
-        </div>
       </div>
     </div>
 
