add class portfolio

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </section>
 
     <!-- porfolio -->
-    <section class="container" id="portfolio"></section>
+    <section class="container" id="portfolio">t</section>
 
     <div class="parallax-container">
       <div class="parallax">
