add class portfolio

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <!-- random image -->
           <div class="caption right-align">
             <h3>Pengembangan Aplikasi Web!</h3>
-            <h5 class="light grey-text text-lighten-3">closeheat!</h5>
+            <a href="#" class="btn blue darken-4 white-text">Pesan sekarang</a>
           </div>
         </li>
         <li>
@@ -73,7 +73,7 @@
           <!-- random image -->
           <div class="caption left-align">
             <h3>Mengintegrasikan sistem yang sudah ada!</h3>
-            <h5 class="light grey-text text-lighten-3">closeheat!</h5>
+            <a href="#" class="btn blue darken-4 white-text">Pesan sekarang</a>
           </div>
         </li>
         <li>
@@ -81,7 +81,7 @@
           <!-- random image -->
           <div class="caption center-align">
             <h3>Pembuatan struktur dan fungsionalitas situs!</h3>
-            <h5 class="light grey-text text-lighten-3">closeheat!</h5>
+            <a href="#" class="btn blue darken-4 white-text">Pesan sekarang</a>
           </div>
         </li>
       </ul>
@@ -145,52 +145,10 @@
       </div>
     </section>
 
-    <!-- tentangkami -->
-    <section class="section container" id="tentang">
-      <div class="row">
-        <div class="col s12 l4 tentang">
-          <h5 class="black-text text-darken-4">Tentang Kami</h5>
-          <p class="card-panel blue-text text-darken-4">
-            closeheat adalah website yang menyediakan berbagai kursus online,
-            tutorial, dan sertifikasi di bidang teknologi informasi. Website ini
-            bertujuan untuk meningkatkan keterampilan teknis dan membantu para
-            pengembang web, pemula maupun profesional, untuk mempelajari
-            teknologi terkini dan terbaru.
-          </p>
-        </div>
-        <div class="col s12 l6 offset-l2">
-          <ul class="tabs">
-            <li class="tab col s6">
-              <a href="#webDeveloper" class="active">Web Developer </a>
-            </li>
-            <li class="tab col s6">
-              <a href="#mobileApp" class="active"> Mobil App Development </a>
-            </li>
-          </ul>
-          <div id="webDeveloper" class="col s12">
-            <p class="flow-text">Web Developer</p>
-            <p class="card-panel blue-text text-darken-4">
-              Web Developer adalah salah satu kesukaan saya bertujuan untuk
-              meningkatkan keterampilan teknis dan membantu para pengembang web,
-              pemula maupun profesional, untuk mempelajari teknologi terkini dan
-              terbaru.
-            </p>
-          </div>
-          <div id="mobileApp" class="col s12">
-            <p class="flow-text">Mobile App Developer Developer</p>
-            <p class="card-panel blue-text text-darken-4">
-              Mobile App Developer Developer adalah salah satu kesukaan saya
-              bertujuan untuk meningkatkan keterampilan teknis dan membantu para
-              pengembang web, pemula maupun profesional, untuk mempelajari
-              teknologi terkini dan terbaru.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <!-- porfolio -->
-    <section class="container" id="portfolio"></section>
+    <section class="container" id="portfolio">
+      <h5 class="light black-text center">Portfolio</h5>
+    </section>
 
     <div class="parallax-container">
       <div class="parallax">
