--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
       </div>
     </section>
 
+    <!-- tentangkami -->
+
     <!-- porfolio -->
     <section class="container" id="portfolio">
       <h5 class="light black-text center">Portfolio</h5>
