--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </p>
         </div>
       </div>
-      <div class="row" id="terakhir">
+      <div class="row">
         <div class="col s12 l4">
           <img
             src="https://cdn-icons-png.flaticon.com/512/6712/6712857.png"
