--- a/index.html
+++ b/index.html
@@ -149,7 +149,31 @@
 
     <!-- porfolio -->
     <section class="container" id="portfolio">
-      <h5 class="light black-text center">Portfolio</h5>
+      <div class="container">
+        <h5 class="light black-text center">Portfolio</h5>
+        <div class="row">
+          <div class="col s12 m4">
+            <div class="card horizontal">
+              <div class="card-image">
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/9969/9969860.png"
+                  class="responsive-img materialboxed" />
+              </div>
+              <div class="card-stacked">
+                <div class="card-content">
+                  <p>
+                    I am a very simple card. I am good at containing small bits
+                    of information.
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a href="#">This is a link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <div class="parallax-container">
