--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="row" id="pertama">
         <div class="col s12 l4">
           <img
-            src="https://cdn-icons-png.flaticon.com/512/3308/3308395.png"
+            src="https://cdn-icons-png.flaticon.com/512/2888/2888407.png"
             alt="Layanan1"
             class="responsive-img materialboxed" />
         </div>
@@ -111,7 +111,7 @@
       <div class="row">
         <div class="col s12 l4 offset-l1 push-l7">
           <img
-            src="https://cdn-icons-png.flaticon.com/512/3623/3623963.png"
+            src="https://cdn-icons-png.flaticon.com/512/6188/6188099.png"
             alt="Layanan1"
             class="responsive-img materialboxed" />
         </div>
@@ -148,27 +148,52 @@
     <!-- tentangkami -->
 
     <!-- porfolio -->
-    <section class="container" id="portfolio">
-      <div class="container">
-        <h5 class="light black-text center">Portfolio</h5>
-        <div class="row">
-          <div class="col s12 m4">
-            <div class="card horizontal">
-              <div class="card-image">
-                <img
-                  src="https://cdn-icons-png.flaticon.com/512/9969/9969860.png"
-                  class="responsive-img materialboxed" />
+    <section class="section container" id="portfolio">
+      <h5 class="light black-text center-align">Portfolio</h5>
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="card horizontal">
+            <div class="card-image">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/9969/9969860.png"
+                class="responsive-img materialboxed" />
+            </div>
+            <div class="card-stacked">
+              <div class="card-content">
+                <p>
+                  Apliksi kalkultor website simpel dengan html css javacript
+                </p>
               </div>
-              <div class="card-stacked">
-                <div class="card-content">
-                  <p>
-                    I am a very simple card. I am good at containing small bits
-                    of information.
-                  </p>
-                </div>
-                <div class="card-action">
-                  <a href="#">This is a link</a>
-                </div>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card horizontal">
+            <div class="card-image">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/3308/3308395.png"
+                class="responsive-img materialboxed" />
+            </div>
+
+            <div class="card-stacked">
+              <div class="card-content">
+                <p>
+                  Layanan ini mencakup perancangan tampilan situs web pembuatan
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card horizontal">
+            <div class="card-image">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/9970/9970583.png"
+                class="responsive-img materialboxed" />
+            </div>
+            <div class="card-stacked">
+              <div class="card-content">
+                <p>List me aplikasi website sederhana dibangun dengan js</p>
               </div>
             </div>
           </div>
