--- a/index.html
+++ b/index.html
@@ -145,11 +145,9 @@
       </div>
     </section>
 
-    <!-- tentangkami -->
-
     <!-- porfolio -->
     <section class="section container" id="portfolio">
-      <h5 class="light black-text center-align">Portfolio</h5>
+      <h5 class="black-text" id="textPortfolio">Portfolio</h5>
       <div class="row">
         <div class="col s12 m4">
           <div class="card horizontal">
@@ -212,7 +210,7 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="black-text">About Content</h5>
+            <h5 class="black-text">Tentang Kami</h5>
             <p class="black-text text-darken-4">
               closeheat adalah website yang menyediakan berbagai kursus online,
               tutorial, dan sertifikasi di bidang teknologi informasi. Website
@@ -222,7 +220,7 @@
             </p>
           </div>
           <div class="col l4 offset-l2 s12">
-            <h5 class="black-text">Links</h5>
+            <h5 class="black-text">Media Sosial</h5>
             <ul>
               <li><a class="black-text text-darken-3" href="#!">Github</a></li>
               <li>
