--- a/index.html
+++ b/index.html
@@ -205,6 +205,21 @@
       </div>
     </div>
 
+    <!-- contak -->
+    <section class="section container" id="kontak">
+      <div class="row">
+        <div class="col s12 l5">
+          <h4 class="black-text">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+              veniam eaque sit delectus officiis esse natus optio quos
+              cupiditate sunt?
+            </p>
+          </h4>
+        </div>
+      </div>
+    </section>
+
     <!-- footer -->
     <footer class="page-footer white">
       <div class="container">
