--- a/index.html
+++ b/index.html
@@ -203,9 +203,68 @@
       <div class="parallax">
         <img src="assets/img/parallax.jpg" />
       </div>
-    </div>
 
-    <!-- contak -->
+      <!-- contact -->
+      <section class="section container" id="kontak">
+        <div class="row">
+          <div class="col s12 l5">
+            <h4>Get In Touch</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+              veniam eaque sit delectus officiis esse natus optio quos
+              cupiditate sunt?
+            </p>
+          </div>
+          <div class="col s12 l5 offset-l2">
+            <form>
+              <div class="input-field">
+                <i class="material-icons prefix">email</i>
+                <input type="email" id="email-input" />
+                <label for="email-input">Masukan Email</label>
+              </div>
+              <div class="input-field">
+                <i class="material-icons prefix">message</i>
+                <textarea
+                  name="message"
+                  class="materialize-textarea"
+                  id="message-input"
+                  cols="30"
+                  rows="10"></textarea>
+                <label for="message-input">Masukan Pesan Anda</label>
+              </div>
+              <div class="input-field">
+                <input type="text" id="date" class="datepicker" readonly />
+                <label for="date">Pilih Tanggal Anda</label>
+              </div>
+              <div class="input-field">
+                <p class="white-text">Layanan Required</p>
+                <p>
+                  <label>
+                    <input type="checkbox" />
+                    <span>Web Developer</span>
+                  </label>
+                </p>
+                <p>
+                  <label>
+                    <input type="checkbox" />
+                    <span>Mobile App Development</span>
+                  </label>
+                </p>
+                <p>
+                  <label>
+                    <input type="checkbox" />
+                    <span>Game Development</span>
+                  </label>
+                </p>
+              </div>
+              <div class="input-field center">
+                <button class="btn blue darken-4 white-text">Kirim</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+    </div>
 
     <!-- footer -->
     <footer class="page-footer white">
