--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             class="responsive-img materialboxed" />
         </div>
         <div class="col s12 l6 offset-l1 pull-l5 right-align">
-          <h5 class="black-text text-darken-4">Integrasi Sistem</h5>
+          <h5 class="black-text text-darken-4">Game Development</h5>
           <p>
             Mengintegrasikan sistem yang sudah ada dengan situs web yang baru
             atau sebaliknya. Dalam layanan integrasi sistem, pengembang web
@@ -129,12 +129,12 @@
       <div class="row">
         <div class="col s12 l4">
           <img
-            src="https://cdn-icons-png.flaticon.com/512/6712/6712857.png"
+            src="https://cdn-icons-png.flaticon.com/512/6211/6211939.png"
             alt="Layanan1"
             class="responsive-img materialboxed" />
         </div>
         <div class="col s12 l6 offset-l1">
-          <h5 class="black-text text-darken-4">Konsultasi dan Pelatihan</h5>
+          <h5 class="black-text text-darken-4">Mobile App Development</h5>
           <p>
             Desain dan Pembuatan Situs Web adalah layanan yang ditawarkan oleh
             pengembang web untuk membuat situs web yang disesuaikan dengan
@@ -208,11 +208,15 @@
       <section class="section container" id="kontak">
         <div class="row">
           <div class="col s12 l5">
-            <h4>Get In Touch</h4>
+            <h4>Hubungi Kami</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
-              veniam eaque sit delectus officiis esse natus optio quos
-              cupiditate sunt?
+              Kami mengundang Anda untuk berhubungan dengan kami dan mengetahui
+              lebih lanjut tentang layanan kami di bidang pembuatan web dan
+              pengembangan Apakah Anda memerlukan bantuan dalam membuat website
+              yang menarik dan fungsional? Silahkan hubungi kami untuk
+              mendapatkan solusi terbaik. Terhubung dengan kami adalah cara yang
+              tepat untuk memulai proyek pembuatan web atau pengembangan Anda.
+              Jangan ragu untuk mengontak kami dan memulai diskusi.
             </p>
           </div>
           <div class="col s12 l5 offset-l2">
