--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 
   <body>
     <!-- header -->
-    <!-- navbar -->
     <div class="navbar-fixed">
       <nav class="white">
         <div class="container">
@@ -39,7 +38,11 @@
             <ul class="right hide-on-med-and-down">
               <li><a href="#home" class="black-text">Home</a></li>
               <li><a href="#layanan" class="black-text">Layanan</a></li>
-              <li><a href="#Tentang" class="black-text">Tentang Kami</a></li>
+              <li>
+                <a href="/_pages/tentang.html" class="black-text"
+                  >Tentang Kami
+                </a>
+              </li>
               <li><a href="#Portfolio" class="black-text">Portfolio </a></li>
               <li><a href="#kontak" class="black-text">Kontak</a></li>
               <li><a class="btn blue darken-4 white-text">LOGIN</a></li>
@@ -50,9 +53,9 @@
     </div>
     <!-- mobile app -->
     <ul class="sidenav" id="mobile-app">
-      <li><a href="#home">Home</a></li>
+      <li><a href="/index.html">Home</a></li>
       <li><a href="#layanan">Layanan</a></li>
-      <li><a href="#Tentang">Tentang Kami</a></li>
+      <li><a href="/_pages/tentang.html">Tentang Kami</a></li>
       <li><a href="#Portfolio">Portfolio </a></li>
       <li><a href="#kontak">Kontak Karir</a></li>
     </ul>
@@ -302,7 +305,9 @@
       <div class="footer-copyright">
         <div class="container black-text">
           © 2014 copyright closeheat!
-          <a class="black-text text-darken-4 center-align" href="#!"
+          <a
+            class="blue-text text-darken-4 center-align"
+            href="https://www.instagram.com/mhaemnn/"
             >muhaemin</a
           >
         </div>
